--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -28,7 +28,7 @@
             android:layout_marginTop="17dp"
             android:fontFamily="@font/spoqa_han_sans_neo_bold"
             android:text="@string/register_register"
-            android:textColor="#1c1c1c"
+            android:textColor="@color/gray06"
             android:textSize="24sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/iv_register_back" />
@@ -41,7 +41,7 @@
             android:layout_marginTop="30dp"
             android:fontFamily="@font/spoqa_han_sans_neo_medium"
             android:text="@string/register_name"
-            android:textColor="#1c1c1c"
+            android:textColor="@color/gray06"
             android:textSize="14sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_register_register" />
@@ -58,7 +58,7 @@
             android:hint="@string/register_name"
             android:inputType="textPersonName"
             android:paddingStart="12dp"
-            android:textColor="#1c1c1c"
+            android:textColor="@color/gray06"
             android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -71,7 +71,7 @@
             android:layout_marginTop="42dp"
             android:fontFamily="@font/spoqa_han_sans_neo_medium"
             android:text="@string/email"
-            android:textColor="#1c1c1c"
+            android:textColor="@color/gray06"
             android:textSize="14sp"
             app:layout_constraintStart_toStartOf="@+id/tv_name"
             app:layout_constraintTop_toBottomOf="@+id/et_name" />
@@ -86,7 +86,7 @@
             android:hint="@string/email"
             android:inputType="none|textEmailAddress"
             android:paddingStart="12dp"
-            android:textColor="#1c1c1c"
+            android:textColor="@color/gray06"
             android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="@+id/et_name"
             app:layout_constraintStart_toStartOf="@+id/et_name"
@@ -99,7 +99,7 @@
             android:layout_marginTop="10dp"
             android:fontFamily="@font/spoqa_han_sans_neo_regular"
             android:text="TextView"
-            android:textColor="#ff0000"
+            android:textColor="@color/red"
             android:textSize="12sp"
             android:visibility="invisible"
             app:layout_constraintStart_toStartOf="@+id/et_email_register"
@@ -112,7 +112,7 @@
             android:layout_marginTop="42dp"
             android:fontFamily="@font/spoqa_han_sans_neo_medium"
             android:text="@string/pw"
-            android:textColor="#1c1c1c"
+            android:textColor="@color/gray06"
             android:textSize="14sp"
             app:layout_constraintStart_toStartOf="@+id/tv_id"
             app:layout_constraintTop_toBottomOf="@+id/et_email_register" />
@@ -128,7 +128,7 @@
             android:inputType="textPassword"
             android:maxLength="16"
             android:paddingStart="12dp"
-            android:textColor="#1c1c1c"
+            android:textColor="@color/gray06"
             android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="@+id/et_email_register"
             app:layout_constraintStart_toStartOf="@+id/et_email_register"
@@ -141,7 +141,7 @@
             android:layout_marginTop="10dp"
             android:fontFamily="@font/spoqa_han_sans_neo_regular"
             android:text="TextView"
-            android:textColor="#ff0000"
+            android:textColor="@color/red"
             android:textSize="12sp"
             android:visibility="invisible"
             app:layout_constraintStart_toStartOf="@+id/et_email_register"
@@ -154,7 +154,7 @@
             android:layout_marginTop="42dp"
             android:fontFamily="@font/spoqa_han_sans_neo_medium"
             android:text="@string/register_checkpw"
-            android:textColor="#1c1c1c"
+            android:textColor="@color/gray06"
             android:textSize="14sp"
             app:layout_constraintStart_toStartOf="@+id/tv_pw"
             app:layout_constraintTop_toBottomOf="@+id/et_pw" />
@@ -169,7 +169,7 @@
             android:hint="@string/register_checkpw"
             android:inputType="textPassword"
             android:paddingStart="12dp"
-            android:textColor="#1c1c1c"
+            android:textColor="@color/gray06"
             android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="@+id/et_pw"
             app:layout_constraintStart_toStartOf="@+id/et_pw"
@@ -182,7 +182,7 @@
             android:layout_marginTop="10dp"
             android:fontFamily="@font/spoqa_han_sans_neo_regular"
             android:text="TextView"
-            android:textColor="#ff0000"
+            android:textColor="@color/red"
             android:textSize="12sp"
             android:visibility="invisible"
             app:layout_constraintStart_toStartOf="@+id/et_email_register"
@@ -193,7 +193,7 @@
             android:layout_width="wrap_content"
             android:layout_height="1dp"
             android:layout_marginTop="24dp"
-            android:background="#e7e7e7"
+            android:background="@color/gray02"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/et_checkpw" />
