--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -24,6 +24,7 @@
     <color name="gray04">#A3A3A3</color>
     <color name="gray05">#4B4B4B</color>
     <color name="gray06">#1C1C1C</color>
+    <color name="red">#ff0000</color>
 
     <color name="orange">#ff9e44</color>
 </resources>
