--- a/app/src/main/res/layout/activity_add_friend.xml
+++ b/app/src/main/res/layout/activity_add_friend.xml
@@ -1,67 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-    <data>
-
-    </data>
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.friend.AddFriendActivity">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/cl_friend_add_top_bar"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:background="@color/gray06"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" >
+        android:layout_height="match_parent"
+        tools:context=".ui.friend.AddFriendActivity">
 
-        <TextView
-            android:id="@+id/tv_friend_add"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/spoqa_han_sans_neo_bold"
-            android:text="@string/friend_add"
-            android:textColor="@color/white"
-            android:textSize="18sp"
-            android:layout_marginTop="42dp"
-            android:layout_marginBottom="17dp"
-            app:layout_constraintBottom_toBottomOf="parent"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/cl_friend_add_top_bar"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:background="@color/gray06"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent">
 
-        <ImageView
-            android:id="@+id/iv_friend_add_back"
-            android:layout_width="wrap_content"
+            <TextView
+                android:id="@+id/tv_friend_add"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="42dp"
+                android:layout_marginBottom="17dp"
+                android:fontFamily="@font/spoqa_han_sans_neo_bold"
+                android:text="@string/addfriend_add"
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <ImageView
+                android:id="@+id/iv_friend_add_back"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="7dp"
+                android:src="@drawable/ic_close_friend"
+                app:layout_constraintBottom_toBottomOf="@+id/tv_friend_add"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/tv_friend_add" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <EditText
+            android:id="@+id/et_search_friend_id"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="7dp"
-            android:src="@drawable/ic_close_friend"
-            app:layout_constraintBottom_toBottomOf="@+id/tv_friend_add"
+            android:layout_marginHorizontal="16dp"
+            android:layout_marginTop="14dp"
+            android:background="@drawable/selector_search_friend"
+            android:hint="@string/addfriend_id"
+            android:imeOptions="actionDone"
+            android:inputType="text"
+            android:maxLines="1"
+            android:paddingVertical="16dp"
+            android:paddingStart="46dp"
+            android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/tv_friend_add" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <EditText
-        android:id="@+id/et_search_friend_id"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="14dp"
-        android:layout_marginHorizontal="16dp"
-        android:background="@drawable/selector_search_friend"
-        android:hint="@string/friend_add_search"
-        android:paddingStart="46dp"
-        android:paddingVertical="16dp"
-        android:textSize="14sp"
-        android:inputType="text"
-        android:maxLines="1"
-        android:imeOptions="actionDone"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/cl_friend_add_top_bar" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/cl_friend_add_top_bar" />
 
         <ImageView
             android:id="@+id/iv_search_friend"
@@ -90,7 +88,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="35dp"
             android:fontFamily="@font/spoqa_han_sans_neo_regular"
-            android:text="검색 결과가 없습니다."
+            android:text="@string/addfriend_null"
             android:textColor="@color/gray04"
             android:textSize="16sp"
             android:visibility="gone"
@@ -130,8 +128,7 @@
                 android:textColor="@color/black"
                 android:textSize="16sp"
                 app:layout_constraintStart_toEndOf="@id/iv_search_profile_image"
-                app:layout_constraintTop_toTopOf="@+id/iv_search_profile_image"
-                tools:text="김준희" />
+                app:layout_constraintTop_toTopOf="@+id/iv_search_profile_image" />
 
             <TextView
                 android:id="@+id/tv_search_friend_email"
@@ -143,8 +140,7 @@
                 android:textSize="13sp"
                 app:layout_constraintBottom_toBottomOf="@+id/iv_search_profile_image"
                 app:layout_constraintStart_toStartOf="@+id/tv_search_friend_name"
-                app:layout_constraintTop_toBottomOf="@id/tv_search_friend_name"
-                tools:text="joon13579@sookmyung.ac.kr" />
+                app:layout_constraintTop_toBottomOf="@id/tv_search_friend_name" />
 
             <ImageView
                 android:id="@+id/iv_add_friend_list"
@@ -155,7 +151,5 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
-
-
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
