--- a/app/src/main/res/layout/fragment_first_apply.xml
+++ b/app/src/main/res/layout/fragment_first_apply.xml
@@ -14,7 +14,6 @@
         android:layout_height="match_parent"
         android:fillViewport="true">
 
-
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -27,8 +26,8 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="29dp"
                 android:fontFamily="@font/spoqa_han_sans_neo_medium"
-                android:text="약속 신청할 "
-                android:textColor="#1c1c1c"
+                android:text="@string/first_apply_choose_friend"
+                android:textColor="@color/gray06"
                 android:textSize="18sp"
                 android:textStyle="normal"
                 app:layout_constraintStart_toStartOf="parent"
@@ -39,7 +38,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/spoqa_han_sans_neo_medium"
-                android:text="친구"
+                android:text="@string/first_apply_choose_friend2"
                 android:textColor="@color/pink"
                 android:textSize="18sp"
                 android:textStyle="normal"
@@ -51,7 +50,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/spoqa_han_sans_neo_medium"
-                android:text="를 선택하세요"
+                android:text="@string/first_apply_choose_friend3"
                 android:textColor="@color/black"
                 android:textSize="18sp"
                 android:textStyle="normal"
@@ -73,7 +72,7 @@
                 android:maxLines="1"
                 android:paddingLeft="46dp"
                 android:singleLine="true"
-                android:textColorHint="#a3a3a3"
+                android:textColorHint="@color/gray04"
                 android:textSize="14sp"
                 android:textStyle="normal"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -95,7 +94,7 @@
                 android:id="@+id/tv_who"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="받는 사람 :"
+                android:text="@string/first_apply_receive_friend"
                 app:layout_constraintBottom_toBottomOf="@+id/iv_search"
                 app:layout_constraintStart_toEndOf="@+id/iv_search"
                 app:layout_constraintStart_toStartOf="@+id/chipGroup"
@@ -126,8 +125,8 @@
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="43dp"
                     android:fontFamily="@font/spoqa_han_sans_neo_medium"
-                    android:text="약속의 "
-                    android:textColor="#1c1c1c"
+                    android:text="@string/first_apply_write_content"
+                    android:textColor="@color/gray06"
                     android:textSize="18sp"
                     android:textStyle="normal"
                     app:layout_constraintStart_toStartOf="parent"
@@ -138,7 +137,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/spoqa_han_sans_neo_medium"
-                    android:text="내용"
+                    android:text="@string/first_apply_write_content2"
                     android:textColor="@color/pink"
                     android:textSize="18sp"
                     android:textStyle="normal"
@@ -150,7 +149,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/spoqa_han_sans_neo_medium"
-                    android:text="을 작성하세요"
+                    android:text="@string/first_apply_write_content3"
                     android:textColor="#1c1c1c"
                     android:textSize="18sp"
                     android:textStyle="normal"
@@ -165,7 +164,7 @@
                     android:layout_marginTop="16dp"
                     android:layout_marginEnd="16dp"
                     android:layout_marginBottom="85dp"
-                    android:background="@drawable/rectangle_gray_10"
+                    android:background="@drawable/rectangle_gray01_10"
                     app:layout_constraintBottom_toBottomOf="@id/apply_line"
                     app:layout_constraintDimensionRatio="328:255"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -178,7 +177,7 @@
                         android:layout_height="50dp"
                         android:background="@null"
                         android:fontFamily="@font/spoqa_han_sans_neo_medium"
-                        android:hint="제목"
+                        android:hint="@string/first_apply_title"
                         android:imeOptions="actionNext"
                         android:inputType="text"
                         android:maxLength="20"
@@ -187,7 +186,7 @@
                         android:paddingTop="15dp"
                         android:paddingBottom="15dp"
                         android:singleLine="true"
-                        android:textColorHint="#a3a3a3"
+                        android:textColorHint="@color/gray04"
                         android:textSize="14sp"
                         android:textStyle="normal"
                         app:layout_constraintEnd_toStartOf="@+id/iv_title_clear"
@@ -213,7 +212,7 @@
                         android:layout_height="1dp"
                         android:layout_marginStart="14dp"
                         android:layout_marginEnd="14dp"
-                        android:background="#e7e7e7"
+                        android:background="@color/gray02"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/et_title" />
@@ -228,15 +227,15 @@
                         android:background="@null"
                         android:fontFamily="@font/spoqa_han_sans_neo_medium"
                         android:gravity="top"
-                        android:hint="약속 상세 내용"
+                        android:hint="@string/first_apply_detail"
                         android:inputType="textMultiLine|textPersonName"
+                        android:overScrollMode="always"
                         android:paddingStart="16dp"
                         android:paddingTop="10dp"
                         android:paddingEnd="8dp"
-                        android:scrollbars="vertical"
-                        android:overScrollMode="always"
                         android:scrollbarStyle="insideInset"
-                        android:textColorHint="#a3a3a3"
+                        android:scrollbars="vertical"
+                        android:textColorHint="@color/gray04"
                         android:textSize="14sp"
                         android:textStyle="normal"
                         app:layout_constraintBottom_toBottomOf="parent"
@@ -250,7 +249,7 @@
                     android:id="@+id/apply_line"
                     android:layout_width="0dp"
                     android:layout_height="1dp"
-                    android:background="#e7e7e7"
+                    android:background="@color/gray02"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent" />
@@ -277,14 +276,14 @@
                 android:layout_marginHorizontal="16dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginBottom="28dp"
-                android:background="@drawable/rectangle_gray_radius_10"
+                android:background="@drawable/rectangle_gray02_10"
                 android:clickable="true"
                 android:enabled="false"
                 android:fontFamily="@font/spoqa_han_sans_neo_medium"
                 android:paddingTop="13dp"
                 android:paddingBottom="13dp"
-                android:text="다음"
-                android:textColor="#ffffff"
+                android:text="@string/first_apply_next"
+                android:textColor="@color/white"
                 android:textSize="16sp"
                 android:textStyle="normal"
                 app:layout_constraintBottom_toBottomOf="parent"
