[MOD] date 파싱 추가 설정 및 bindingAdapter 추가
- 서버에서 오늘 날짜 값 형태 변경 > yy.MM.dd에서 yyyy-MM-dd'T'HH:mm:ss.SSS'Z꼴로 바뀌어 넘어옴. 이에 맞춰 수정.
- 기타 xml _ bindingAdapter 수정 및 추가.

--- a/app/src/main/res/layout/activity_receive.xml
+++ b/app/src/main/res/layout/activity_receive.xml
@@ -240,8 +240,8 @@
                             android:layout_height="wrap_content"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent"
-                            app:setWordPinkAllText="@{@string/receive_choice_msg}"
-                            app:setPinkText="@{@string/receive_choice_msg_bold}"
+                            app:setWordPinkBoldAllText="@{@string/receive_choice_msg}"
+                            app:setPinkBoldText="@{@string/receive_choice_msg_bold}"
                             tools:text="@string/receive_choice_msg"
                             android:fontFamily="@font/spoqa_han_sans_neo_regular"
                             android:textSize="20sp"
