--- a/app/src/main/res/layout/item_send_timelist.xml
+++ b/app/src/main/res/layout/item_send_timelist.xml
@@ -31,7 +31,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             tools:text="2021.12.03"
-            android:text="@{dateData.date}"
+            app:setYearMonthDayWithDot="@{dateData.date}"
             app:layout_constraintStart_toStartOf="@id/iv_send_time_bg"
             app:layout_constraintTop_toTopOf="@id/iv_send_time_bg"
             android:layout_marginTop="20dp"
