[FEAT] #90 drawer layout _ 상태바 가리게 설정.

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -221,7 +221,8 @@
             android:layout_height="match_parent"
             android:layout_gravity="start"
             android:overScrollMode="never"
-            android:visibility="visible">
+            android:visibility="visible"
+            android:fitsSystemWindows="true">
 
             <include android:id="@+id/nv_mypage" layout="@layout/view_mypage"/>
 
