--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,115 +1,127 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/white"
-    tools:context=".ui.registration.LoginActivity">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <ImageView
-        android:id="@+id/iv_logo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_img_seemeet_logo_symbol_typo_square" />
+    <data>
+        <variable
+            name="viewModel"
+            type="org.seemeet.seemeet.ui.viewmodel.LoginViewModel" />
+    </data>
 
-    <EditText
-        android:id="@+id/et_email"
-        android:layout_width="0dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="21dp"
-        android:layout_marginEnd="16dp"
-        android:background="@drawable/rectangle_gray_10"
-        android:drawableLeft="@drawable/ic_btn_friends"
-        android:fontFamily="@font/spoqa_han_sans_neo_regular"
-        android:hint="@string/email"
-        android:inputType="textEmailAddress"
-        android:textColor="@color/gray06"
-        android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/iv_logo" />
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/white"
+        tools:context=".ui.registration.LoginActivity">
 
-    <EditText
-        android:id="@+id/et_pw"
-        android:layout_width="0dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="14dp"
-        android:background="@drawable/rectangle_gray_10"
-        android:drawableLeft="@drawable/ic_login_lock"
-        android:drawablePadding="18dp"
-        android:fontFamily="@font/spoqa_han_sans_neo_regular"
-        android:hint="@string/pw"
-        android:inputType="textPassword"
-        android:paddingStart="16dp"
-        android:textColor="@color/gray06"
-        android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="@+id/et_email"
-        app:layout_constraintStart_toStartOf="@+id/et_email"
-        app:layout_constraintTop_toBottomOf="@+id/et_email" />
+        <ImageView
+            android:id="@+id/iv_logo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/ic_img_seemeet_logo_symbol_typo_square" />
 
-    <ImageView
-        android:id="@+id/iv_pw_show_hidden"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:clickable="true"
-        android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="@+id/et_pw"
-        app:layout_constraintEnd_toEndOf="@+id/et_pw"
-        app:layout_constraintTop_toTopOf="@+id/et_pw"
-        app:srcCompat="@drawable/ic_pw_hidden" />
+        <EditText
+            android:id="@+id/et_email"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="21dp"
+            android:layout_marginEnd="16dp"
+            android:background="@drawable/rectangle_gray_10"
+            android:drawableLeft="@drawable/ic_btn_friends"
+            android:fontFamily="@font/spoqa_han_sans_neo_regular"
+            android:hint="@string/email"
+            android:inputType="textEmailAddress"
+            android:text="@={viewModel.loginEmail}"
+            android:textColor="@color/gray06"
+            android:textSize="14sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/iv_logo" />
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btn_login"
-        android:layout_width="0dp"
-        android:layout_height="54dp"
-        android:layout_marginBottom="265dp"
-        android:background="@drawable/rectangle_gray04_10"
-        android:clickable="false"
-        android:enabled="false"
-        android:fontFamily="@font/spoqa_han_sans_neo_medium"
-        android:text="@string/login"
-        android:textColor="@color/white"
-        android:textSize="16sp"
-        android:textStyle="normal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/et_pw"
-        app:layout_constraintStart_toStartOf="@+id/et_pw" />
+        <EditText
+            android:id="@+id/et_pw"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="14dp"
+            android:background="@drawable/rectangle_gray_10"
+            android:drawableLeft="@drawable/ic_login_lock"
+            android:drawablePadding="18dp"
+            android:fontFamily="@font/spoqa_han_sans_neo_regular"
+            android:hint="@string/pw"
+            android:inputType="textPassword"
+            android:paddingStart="16dp"
+            android:text="@={viewModel.loginPw}"
+            android:textColor="@color/gray06"
+            android:textSize="14sp"
+            app:layout_constraintEnd_toEndOf="@+id/et_email"
+            app:layout_constraintStart_toStartOf="@+id/et_email"
+            app:layout_constraintTop_toBottomOf="@+id/et_email" />
 
-    <ImageView
-        android:id="@+id/iv_small_logo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:layout_marginEnd="2dp"
-        android:gravity="end"
-        android:text="SeeMeet"
-        android:textColor="@color/black"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toStartOf="@+id/tv_register"
-        app:layout_constraintHorizontal_chainStyle="packed"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_login"
-        app:srcCompat="@drawable/ic_img_seemeet_logo_typo_banner" />
+        <ImageView
+            android:id="@+id/iv_pw_show_hidden"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:clickable="true"
+            android:visibility="invisible"
+            app:layout_constraintBottom_toBottomOf="@+id/et_pw"
+            app:layout_constraintEnd_toEndOf="@+id/et_pw"
+            app:layout_constraintTop_toTopOf="@+id/et_pw"
+            app:srcCompat="@drawable/ic_pw_hidden" />
 
-    <TextView
-        android:id="@+id/tv_register"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="2dp"
-        android:layout_marginTop="21dp"
-        android:fontFamily="@font/spoqa_han_sans_neo_medium"
-        android:text="@string/login_register"
-        android:textColor="@color/gray05"
-        android:textSize="14sp"
-        android:textStyle="normal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/iv_small_logo"
-        app:layout_constraintTop_toBottomOf="@+id/btn_login" />
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btn_login"
+            android:layout_width="0dp"
+            android:layout_height="54dp"
+            android:layout_marginBottom="265dp"
+            android:background="@drawable/rectangle_gray04_10"
+            android:clickable="false"
+            android:enabled="false"
+            android:fontFamily="@font/spoqa_han_sans_neo_medium"
+            android:text="@string/login"
+            android:textColor="@color/white"
+            android:textSize="16sp"
+            android:textStyle="normal"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/et_pw"
+            app:layout_constraintStart_toStartOf="@+id/et_pw" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <ImageView
+            android:id="@+id/iv_small_logo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:layout_marginEnd="2dp"
+            android:gravity="end"
+            android:text="SeeMeet"
+            android:textColor="@color/black"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toStartOf="@+id/tv_register"
+            app:layout_constraintHorizontal_chainStyle="packed"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/btn_login"
+            app:srcCompat="@drawable/ic_img_seemeet_logo_typo_banner" />
+
+        <TextView
+            android:id="@+id/tv_register"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="2dp"
+            android:layout_marginTop="21dp"
+            android:fontFamily="@font/spoqa_han_sans_neo_medium"
+            android:text="@string/login_register"
+            android:textColor="@color/gray05"
+            android:textSize="14sp"
+            android:textStyle="normal"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/iv_small_logo"
+            app:layout_constraintTop_toBottomOf="@+id/btn_login" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</layout>
